v2/02-사용자시나리오.md
# 02. 사용자 시나리오 (페르소나 포함)

> **버전**: v1.5 (코드 구현 기준 동기화 — 동네 인증 및 근처 상품 조회, Lettuce 분산락, Redis ZSET 인기검색어, 거래완료 주체 변경 반영)

---

## 1. 페르소나 정의

### 페르소나 A — 판매자 "김민준" (26세, 대학원생)

| 항목 | 내용 |
|------|------|
| 상황 | 졸업 후 이사를 앞두고 안 쓰는 물건을 정리하고 싶다 |
| 기술 숙련도 | 스마트폰에 익숙, 앱 사용에 거부감 없음 |
| 목표 | 빠르게 물건을 올리고, 관심 있는 사람과 채팅해서 거래를 완료하고 싶다 |
| 불만 | 여러 명이 동시에 "살게요"라고 해서 누구에게 팔아야 할지 혼란스럽다 |
| 핵심 행동 | 상품 등록 → 채팅 응답 → 예약 확정 → 거래 완료 처리 |

---

### 페르소나 B — 구매자 "이서연" (29세, 직장인)

| 항목 | 내용 |
|------|------|
| 상황 | 이사하면서 가성비 좋은 중고 가구를 찾고 있다 |
| 기술 숙련도 | 앱 사용 능숙, 검색에 의존 |
| 목표 | 원하는 물건을 빠르게 찾고, 상태를 확인한 뒤 예약하고 싶다 |
| 불만 | 검색 결과가 느리거나, 이미 팔린 물건이 계속 보인다 |
| 핵심 행동 | 검색 → 상품 상세 조회 → 채팅 → 예약 요청 |

---

### 페르소나 C — 재판매자 "박준서" (33세, 프리랜서)

| 항목 | 내용 |
|------|------|
| 상황 | 자주 물건을 사고팔며 플랫폼을 적극적으로 활용한다 |
| 기술 숙련도 | 높음, 필터/정렬 기능을 적극 활용 |
| 목표 | 카테고리 필터로 원하는 물건만 빠르게 탐색, 여러 물건 동시에 관리 |
| 불만 | 동시에 여러 물건을 관리할 때 상태가 뒤섞임 |
| 핵심 행동 | 카테고리 필터 검색 → 찜하기 → 채팅 → 대량 상품 등록/관리 |

---

## 2. 사용자 시나리오

### 시나리오 1. 판매자가 상품을 등록하고 거래를 완료한다

**페르소나**: 김민준 (판매자)

```
1. 앱에 로그인한다 (JWT 발급)
2. [상품 등록] 버튼을 누른다
3. 카테고리 선택: 가구/침대 프레임
4. 제목, 설명, 가격, 사진을 입력하고 등록한다
   → 상태: "판매중"
5. 이서연에게 채팅이 온다: "아직 판매 중인가요?"
6. 이서연이 [예약하기]를 누른다
   → 상태: "RESERVED" (즉시 예약, 이 시점부터 다른 사람은 예약 불가)
7. 민준이 예약자를 확인한다
   → 예약된 대상이 이서연임을 확인
8. 민준이 직거래를 위해 [거래 시작 확인]을 누른다
   → 상태: "TRADING"
9. 직거래 후 이서연이 [거래 완료]를 누른다
   → 상태: "SOLD_OUT"
10. 이서연이 리뷰를 작성한다
   → 상태: "REVIEWED"
```

**핵심 기술 포인트**: 6번 단계에서 동시에 여러 사용자가 예약을 시도할 경우, 비관적 락 + Lettuce 분산락(SETNX)으로 정확히 1명만 예약 성공

---

### 시나리오 2. 구매자가 상품을 검색하고 예약한다

**페르소나**: 이서연 (구매자)

```
1. 앱을 실행한다 (비로그인 상태에서도 검색 가능)
2. 검색창에 "침대 프레임"을 입력한다
   → Redis ZSET 기반 실시간 인기 검색어 제공
3. 카테고리 필터: "가구 > 침대/매트리스"로 좁힌다
4. 상품 목록에서 민준의 상품을 클릭한다
5. 상세 페이지에서 사진과 설명을 확인한다
6. [채팅하기] 버튼을 누른다 → 로그인 유도 (미로그인 시)
7. 로그인 후 채팅방이 생성된다
8. "아직 판매 중인가요?" 메시지를 보낸다
9. 민준의 응답을 받고 [예약하기] 요청을 보낸다
   → 즉시 상태: "예약중" (판매자 승인 없음)
```

**핵심 기술 포인트**: 2번 인기 검색어는 Redis ZSET 기반 실시간 집계, 3번 카테고리 필터는 QueryDSL 동적 쿼리 및 Caffeine 로컬 캐시 (v2 예정)

---

### 시나리오 3. 동시에 두 명이 같은 상품을 예약 시도한다

**페르소나**: 이서연 + 또 다른 구매자 최우진

```
1. 이서연과 최우진이 거의 동시에 같은 상품 상세 페이지를 보고 있다
2. 두 사람이 동시에 [예약하기] 버튼을 클릭한다
3. 서버에서 Lettuce 분산락 획득 시도
   → 이서연이 0.001초 먼저 락 획득
   → 최우진은 지수 백오프(Exponential Backoff)로 재시도하지만 이미 이서연이 획득 상태 유지
4. 이서연: 예약 성공 (상태 "예약중")
5. 최우진: "이미 예약된 상품입니다" 응답 수신
   → 찜하기만 가능, 채팅은 가능
```

**핵심 기술 포인트**: Lettuce SETNX 분산락 + 지수 백오프 스핀락 — 락 경합 시 효율적인 재시도 및 정합성 보장

---

### 시나리오 4. 재판매자가 여러 상품을 관리한다

**페르소나**: 박준서 (재판매자)

```
1. 로그인 후 [내 판매 목록] 진입
2. 등록된 상품 5개 목록 확인 (상태별 필터: 판매중/예약중/완료)
3. "판매중" 상품 3개 확인
4. 특정 상품의 가격을 수정한다
5. 채팅 알림이 온 상품 2개 확인
6. 각 채팅방에서 구매자와 협의 진행
7. 구매자 확정 후 상태를 "예약중"으로 변경
```

---

### 시나리오 5. 비회원이 검색 후 채팅을 시도하고 로그인으로 유도된다

**페르소나**: 이서연 (비로그인 방문자)

```
1. 앱을 실행한다 (비로그인 상태)
2. 검색창에 "침대 프레임"을 입력한다
3. 상품 목록과 상세 페이지를 둘러본다
4. [채팅하기] 버튼을 누른다
5. 시스템이 로그인 페이지로 이동시킨다
6. 로그인 완료 후 원래 보던 상품 상세 또는 채팅방 생성 흐름으로 복귀한다
```

**핵심 기술 포인트**: 비회원도 조회/검색은 가능하지만, 채팅과 예약은 인증 후에만 허용된다.

---

### 시나리오 6. 동네 인증 후 근처 상품을 조회한다

**페르소나**: 이서연 (구매자)

```
1. 앱에 로그인한다
2. [동네 인증] 메뉴에 진입한다
3-A. GPS 방식: 현재 위치를 전송한다
      → POST /api/location/verify/gps { lat, lng }
      → 카카오 API가 좌표를 행정구역명으로 변환
3-B. 주소 방식: "서울 마포구 합정동" 텍스트를 입력한다
      → POST /api/location/verify/address { address }
      → 카카오 API가 주소를 좌표로, 다시 행정구역명으로 변환
4. 동네 인증 완료 응답 수신 (locationName, locationRadius 저장)
5. [근처 상품] 탭에 진입한다
   → GET /api/products/nearby?page=0
   → 서버: 회원의 인증된 위치 기준 반경 내 SALE·RESERVED 상품 거리 오름차순 조회
6. 거리 순으로 정렬된 근처 상품 목록을 확인한다
7. 관심 있는 상품을 클릭해 상세 페이지로 진입한다
```

**핵심 기술 포인트**: 카카오 지도 API Geocoding·Reverse Geocoding, MySQL `ST_Distance_Sphere` + `ST_GeomFromText`로 반경 계산, SRID 4326 공간 좌표계

---

## 3. 사용자 여정 요약

```
[비회원]
  └─ 상품 목록 조회 (가능)
  └─ 상품 상세 조회 (가능)
  └─ 검색 (가능)
  └─ 채팅 시도 → 로그인 유도

[회원 - 구매자]
  └─ 로그인/회원가입
  └─ 동네 인증 (GPS 또는 주소 입력)
  └─ 근처 상품 조회 (거리 오름차순)
  └─ 검색 + 필터
  └─ 상품 상세 조회
  └─ 찜하기
  └─ 채팅 (1:1)
  └─ 예약 요청
  └─ 거래 완료 확인
  └─ 리뷰 작성

[회원 - 판매자]
  └─ 상품 등록/수정/삭제
  └─ 채팅 응답
  └─ 거래 시작 확인 / 예약 취소
  └─ 거래 상태 변경 (SALE → RESERVED → TRADING)
  └─ 리뷰 확인
```
